# gitlore

./: .gitignore  CLAUDE.md  README.md  gitlore.toml.example  pyproject.toml
.gitlore/: cache.db  index.db
01/895b027786/: metadata.json
01/895b027786/0/: content_hash.txt  context.md  metadata.json  prompt.txt
0d/2dda9d17a4/: metadata.json
0d/2dda9d17a4/0/: content_hash.txt  context.md  metadata.json  prompt.txt
0d/5038ce9418/: metadata.json
34/07da4129dd/: metadata.json
4b/ede0e53d0d/: metadata.json
51/5baa8077d7/: metadata.json
70/d1132d4454/: metadata.json
7c/952c43d49a/: metadata.json
bd/22e1f0fafb/: metadata.json
c8/3ecaea48d2/: metadata.json
ca/1a834b5530/: metadata.json
d2/e218d512ca/: metadata.json
df/de800906a0/: metadata.json
docs/: development.md
e4/10bff72d04/: metadata.json
f4/7199e544a5/: metadata.json
research/: churn-revert-detection.md  cochange-coupling.md  comment-classification.md  commit-classification.md  git-log-extraction.md  pr-comment-extraction.md  rule-synthesis.md  semantic-clustering.md
src/gitlore/: __init__.py  __main__.py  build.py  cache.py  cli.py  config.py  docs.py  export.py  index.py  mcp_server.py  models.py  pipeline.py  query.py
tests/: conftest.py  test_advice_investigation.py  test_cache.py  test_churn.py  test_comment_classifier.py  test_commit_classifier.py  test_context_engine.py  test_conventions.py  test_coupling.py  test_fix_after.py  test_formatters.py  test_git_log.py  test_github_comments.py  test_reverts.py  test_semantic_clustering.py  test_synthesis.py  test_tools.py
(+86 files in other folders)
