[project]
name = "gitlore"
version = "0.1.0"
description = "Mine git history and PR reviews to generate AI coding assistant configs"
readme = "README.md"
authors = [
    { name = "snek-git", email = "felo.markosyan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "httpx>=0.27",
    "litellm>=1.50",
    "networkx>=3.2",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "hdbscan>=0.8.38",
    "python-dotenv>=1.0",
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "respx>=0.22",
]

[project.scripts]
gitlore = "gitlore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
